:recycle: regularizing producer, still issues producing data but available and working

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "node-red": {
     "nodes": {
-      "capitalizer": "dist/capitalize-all-first-letters.js"
+      "kafka-connector": "dist/kafka-connector.js",
+      "kafka-producer": "dist/kafka-producer.js"
     }
   },
   "files": [
